# python_htmx_websockets_demo

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  readme.md
src/: config.py  db.py  emoji.py  emoji.txt  html.py  http_client.py  logging.py  main.py  websockets.py
src/templates/: index.html  render_link.jinja2
